adguardhome/templates/service.yml
#@ load("_ytt.lib.yml", "labels")

---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome
  namespace: adguardhome
  labels: #@ labels("svc")
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector: #@ labels("server")
